<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sentence_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?attr/backgroundcolor">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="?attr/backgroundcolor"
    >
    <RelativeLayout
        android:id="@+id/rename_relativeLayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundcolor"
        >
        <TextView
            android:id="@+id/remove_textView_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="@string/are_you_sure_you_want_to_remove"
            android:textColor="?attr/textcolor"
            android:textSize="15sp"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/remove_yes_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/remove_textView_id"
            android:text="@string/yes"
            android:textColor="?attr/textcolor"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:padding="10dp"
             />
        <TextView
            android:id="@+id/remove_cancel_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/remove_textView_id"
            android:layout_toLeftOf="@id/remove_yes_id"
            android:layout_toStartOf="@id/remove_yes_id"
            android:text="@string/no"
            android:textColor="?attr/textcolor"
            android:textSize="15sp"
            android:padding="10dp"
            />
    </RelativeLayout>
</LinearLayout>
</android.support.v7.widget.CardView>