<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sentence_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
app:cardBackgroundColor="?attr/backgroundcolor"
    >
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="?attr/backgroundcolor"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/backgroundcolor"
        >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/choose_image"
    android:textColor="?attr/textcolor"
    />
        <ImageButton
            android:id="@+id/choose_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/image_24dp"
            android:contentDescription="@string/choose_image" />
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/update_cancel_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="?attr/textcolor"
                android:textSize="15sp"
                android:padding="10dp"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/update_ok_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="?attr/textcolor"
                android:textSize="15sp"
                android:padding="10dp"
                android:layout_weight="1"
                />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>
</android.support.v7.widget.CardView>