<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/sentence_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/backgroundcolor"
            >
                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:background="?attr/backgroundcolor"
                    >
                        <LinearLayout
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:tools="http://schemas.android.com/tools"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="5dp"

                            >

                                <ImageButton
                                    android:id="@+id/choose_image"
                                    android:layout_width="150dp"
                                    android:layout_height="150dp"
                                    android:layout_marginBottom="10dp"
                                    android:layout_gravity="center"
                                    android:scaleType="fitCenter"
                                    android:src="@drawable/image_24dp"
                                    android:contentDescription="@string/choose_image" />

                                <RadioGroup
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_margin="0dp"
                                    android:gravity="center"
                                    android:orientation="horizontal"
                                    android:layout_marginBottom="10dp"
                                    >
                                        <android.support.v7.widget.AppCompatRadioButton
                                            android:id="@+id/image_option"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/image"
                                            android:textColor="?attr/textcolor"
                                            app:buttonTint="@color/colorAccent"
                                            />

                                        <android.support.v7.widget.AppCompatRadioButton
                                            android:id="@+id/category_option"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_margin="0dp"
                                            android:padding="0dp"
                                            android:text="@string/category"
                                            android:textColor="?attr/textcolor"
                                            app:buttonTint="@color/colorAccent"
                                            />
                                </RadioGroup>
                                <EditText

                                    android:id="@+id/image_name_editText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="10dp"
                                    android:inputType="textPersonName"
                                    android:textSize="20sp"
                                    android:textColor="?attr/textcolor"
                                    android:hint="@string/label"
                                    android:textColorHint="?attr/textcolor"
                                    android:background="?attr/buttoncolor"
                                    android:importantForAutofill="no"
                                    tools:targetApi="o" />
                                <Button
                                    android:id="@+id/add_done"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="10dp"
                                    android:text="@string/add"
                                    android:textColor="?attr/textcolor"
                                    android:textSize="20sp"
                                    android:background="?attr/buttoncolor"
                                    />
                        </LinearLayout>
                </LinearLayout>
        </android.support.v7.widget.CardView>
</ScrollView>